<resources>
    <string name="app_name">TripLog</string>
    <string name="app_slogan">Manage your fun!</string>

    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_theme">Dark Mode</string>
    <string name="action_about">About</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_linkedin">Check me on linkedin</string>

    <string name="txt_type">Type</string>
    <string name="txt_color">Color</string>
    <string name="txt_test">Test</string>
    <string name="txt_trip_image_description">Trip image</string>
    <string name="txt_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non tincidunt felis. Vivamus quis tincidunt eros. Ut auctor aliquam diam. Morbi ante lacus, molestie ut orci sit amet, dapibus luctus arcu. Sed quis dignissim lacus, eget imperdiet odio. Maecenas dapibus eros euismod pretium congue. Sed mollis ante eu libero posuere, id pretium tellus consectetur. Nulla a condimentum nulla. Nunc semper eu nisi eget tempor. Suspendisse dapibus odio ligula, ut porttitor lorem molestie nec. Fusce fringilla commodo justo nec scelerisque. Nunc suscipit purus eu purus ultricies finibus eget eu odio. Aliquam tincidunt pulvinar scelerisque.\nCras vel nunc placerat nulla varius venenatis. Quisque imperdiet sem eget odio ullamcorper, ac condimentum ex malesuada. Etiam ultricies euismod pharetra. Vivamus gravida sodales elit, ac venenatis arcu viverra quis. Donec vitae accumsan eros. Mauris mattis mattis lorem a scelerisque. Suspendisse eu massa tincidunt, porttitor lectus suscipit, tincidunt lacus. Mauris non venenatis ipsum. In laoreet, turpis vel malesuada accumsan, ligula nunc aliquet elit, nec sagittis ipsum lorem in lacus. Mauris ac venenatis purus.\nFusce iaculis mauris a neque fringilla, quis imperdiet nulla viverra. Nunc imperdiet enim sed metus aliquam pellentesque. In dictum vel ex in posuere. Vivamus lorem neque, scelerisque et sapien sed, mollis commodo lacus. Quisque cursus nunc ipsum, eu vestibulum lectus euismod nec. Donec blandit, quam suscipit consectetur ornare, nunc tellus mollis nulla, sed malesuada erat est vel purus. Nam et porta quam. Cras nec posuere erat. Proin lobortis consectetur libero. Suspendisse lacinia faucibus justo quis commodo. Vivamus aliquam est eget varius congue. Suspendisse potenti.\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut elit id metus ultricies lacinia. Proin quis mauris et nisi cursus cursus sed id libero. Phasellus ultricies aliquam feugiat. Quisque vitae lacus velit. Vestibulum sit amet porttitor orci. Nam id posuere dui, non ornare nunc. Nam commodo, massa in scelerisque iaculis, orci ante facilisis quam, ac rutrum nisi elit sed magna. Quisque mi nisl, molestie ut sollicitudin ut, consectetur et lectus. Quisque vel metus nulla.\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quam ante, placerat quis iaculis in, consectetur quis neque. Curabitur vel pharetra lectus. Suspendisse sed neque semper sapien commodo faucibus quis placerat leo. Ut turpis augue, vulputate sit amet nunc in, ultrices facilisis arcu. Maecenas porta ante at massa placerat pellentesque. Aenean a tortor eget felis malesuada tincidunt ac non orci.</string>
    <string name="txt_name">Name</string>
    <string name="txt_description">Description</string>
    <string name="txt_date">Date</string>
    <string name="txt_trip">Trip</string>
    <string name="txt_add_trip">Add trip</string>
    <string name="txt_about">TripLog is a sort of log book where you can record all the places you\'ve visited.\n\nThis app was developed by Breno Angelotti as part of the Mobile Development class at UTFPR</string>
    <string name="txt_edit_trip">Edit trip</string>

    <string name="message_obligatory_field">Obligatory field</string>
    <string name="message_not_implemented">Function yet to be implemented</string>
    <string name="message_discard_changes">Discard changes?</string>
    <string name="message_error">Unknown error</string>

    <string name="format_date">MM/dd/yyyy</string>

    <string name="const_index">INDEX</string>

    <string name="url_linkedin">https://www.linkedin.com/in/brenoangelotti/</string>
    <string name="txt_no_trips">No trip logs yet!</string>
    <string name="action_view_types">View types</string>
    <string name="message_remove_trip">Remove trip log?</string>
    <string name="const_id">ID</string>
    <string name="const_title">TITLE</string>

</resources>
