<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackgroundColor">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                />
        </android.support.design.widget.AppBarLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/layoutTop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/txt_UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_marginTop="75dp"
                    android:textColor="?attr/primaryTextColor"
                    android:text="@string/action_about"/>

                <TextView
                    android:id="@+id/txt_UserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="?attr/secondaryTextColor"
                    android:text="@string/txt_about"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/action_linkedin"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:drawablePadding="12dp"
                android:onClick="openLinkedin"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/linkedin"/>
            </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/layoutTop" >
    </RelativeLayout>

    <android.support.design.card.MaterialCardView
        android:id="@+id/crd_developer"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="86dp"
        app:cardCornerRadius="64dp"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/breno_angelotti"/>
    </android.support.design.card.MaterialCardView>

</RelativeLayout>
